--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudfare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
         <link rel="Stylesheet" type="text/css" href="css/style.production.css">
-        <title>Matthew Sprague Portfolio</title>
+        <title>Document Title</title>
     </head>
         <body>
             <header class="page-header divider">
