--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
         <link rel="shortcut icon" href="img/annotate.png" type="image/x-icon" />
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudfare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link rel="Stylesheet" type="text/css" href="css/style.production.css">
-        <title>Matthew Sprague Portfolio</title>
+        <title>Contact Matthew Sprague</title>
     </head>
         <body>
             <header class="page-header divider">
