--- a/contact.html
+++ b/contact.html
@@ -29,11 +29,11 @@
                     </ul>
                 </nav>
             </header>
-            <div>
+            <div class="about-me">
                 <h1>
                     Contact Me
                 </h1>
-                <div>
+                <div class="about-me">
                     Matthew Sprague<br>
                     808 Stonewood Bend Dr<br>
                     Lake St. Louis, MO 63021<br>
@@ -43,7 +43,7 @@
                     <a href="mailto:mttsprague@gmail.com">Email Me</a>
                 </div>
             </div>
-            <div>
+            <div class="about-me">
                 <form action="" method="post" id="contact-form">
                     <label class="standard-label" for="contact-email">E-mail: </label>
                     <input type="email" id="contact-email" required>
