--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" href="img/annotate.png" type="image/x-icon" />
+        <link rel="shortcut icon" href="img/annotate.png" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudfare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link rel="Stylesheet" type="text/css" href="css/style.production.css">
         <title>Learn about Matthew Sprague</title>
@@ -37,8 +37,8 @@
                     This page is about me and what I enjoy doing!
                 </h2>
                 <ul class="navigation-list">
-                    <li>Frontend development</li><br>
-                    <li>Backend Development</li><br>
+                    <li>Frontend development</li>
+                    <li>Backend Development</li>
                     <li>Playing and coaching volleyball</li>
                     <li>Spending time with my family</li>
                 </ul>
