--- a/work.html
+++ b/work.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="shortcut icon" href="img/annotate.png" type="image/x-icon" />
+        <link rel="shortcut icon" href="img/annotate.png" type="image/x-icon">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudfare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
         <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap" rel="stylesheet">
         <link rel="Stylesheet" type="text/css" href="css/style.production.css">
